--- a/nginx/templates/nginx.conf.template
+++ b/nginx/templates/nginx.conf.template
@@ -1,5 +1,5 @@
-# File: nginx.conf (with whitelist configured but open to all by default)
-# Directory: /deepseek-coder-setup/nginx/
+# File: default.conf.template
+# Directory: /deepseek-coder-setup/nginx/templates/
 
 # NGINX Configuration for DeepSeek-Coder Web UI
 # With GZIP compression, rate limiting, and security features
@@ -126,21 +126,6 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
         }
-        
-        # More restrictive registration endpoint example (commented out)
-        # To restrict registration to specific IPs, uncomment this section
-        #location /register {
-        #    # Example: Only allow specific IPs to access registration
-        #    allow 127.0.0.1;         # localhost
-        #    allow 192.168.1.100;     # Admin IP
-        #    deny all;                # Block all other IPs
-        #    
-        #    proxy_pass http://${WEB_UI_HOST}:8000/register;
-        #    proxy_set_header Host $host;
-        #    proxy_set_header X-Real-IP $remote_addr;
-        #    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        #    proxy_set_header X-Forwarded-Proto $scheme;
-        #}
         
         # Static files
         location /static/ {
