--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,35 +1,68 @@
-# File: docker-compose.yml (Updated with exposed port)
-# Directory: /deepseek-coder-setup/
-
 version: '3.8'
 
 services:
-  # PostgreSQL database for auth and chat history
+  # PostgreSQL Database
   postgres:
-    build:
-      context: ./db
+    image: postgres:15-alpine
     container_name: deepseek-postgres
     environment:
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: ${POSTGRES_USER:-postgres}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-postgres}
+      POSTGRES_DB: ${POSTGRES_DB:-deepseek}
     volumes:
       - postgres_data:/var/lib/postgresql/data
+      - ./postgres/init:/docker-entrypoint-initdb.d
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
-      interval: 10s
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 5s
       timeout: 5s
       retries: 5
-    networks:
-      - deepseek_network
     restart: unless-stopped
 
-  # Ollama service for DeepSeek-Coder model
+  # Web UI Application
+  web-ui:
+    build: ./web-ui
+    container_name: deepseek-web-ui
+    depends_on:
+      postgres:
+        condition: service_healthy
+    environment:
+      POSTGRES_USER: ${POSTGRES_USER:-postgres}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-postgres}
+      POSTGRES_DB: ${POSTGRES_DB:-deepseek}
+      POSTGRES_HOST: postgres
+      OLLAMA_HOST: ollama
+      MODEL_NAME: ${MODEL_NAME:-deepseek-coder:6.7b-instruct-q5_K_M}
+      SESSION_SECRET: ${SESSION_SECRET:-changeme_in_production}
+      ADMIN_USERNAME: ${ADMIN_USERNAME:-admin}
+      ADMIN_PASSWORD: ${ADMIN_PASSWORD:-admin}
+    restart: unless-stopped
+
+  # Nginx Reverse Proxy
+  nginx:
+    build: ./nginx
+    container_name: deepseek-nginx
+    depends_on:
+      - web-ui
+    ports:
+      - "${PORT:-80}:80"
+    environment:
+      MAX_BODY_SIZE: ${MAX_BODY_SIZE:-10M}
+      RATE_LIMIT_REQS: ${RATE_LIMIT_REQS:-10}
+      RATE_LIMIT_WINDOW: ${RATE_LIMIT_WINDOW:-60s}
+      FAILED_LOGIN_LIMIT: ${FAILED_LOGIN_LIMIT:-5}
+      WEB_UI_HOST: web-ui
+    volumes:
+      - ./nginx/static:/usr/share/nginx/html/static
+    restart: unless-stopped
+
+  # Ollama Model Server
   ollama:
     image: ollama/ollama:latest
     container_name: deepseek-ollama
     volumes:
       - ollama_data:/root/.ollama
+    restart: unless-stopped
     deploy:
       resources:
         reservations:
@@ -37,65 +70,6 @@ services:
             - driver: nvidia
               count: all
               capabilities: [gpu]
-    ports:
-      - "11434:11434"
-    networks:
-      - deepseek_network
-    restart: unless-stopped
-
-  # Quart-based Web UI
-  web-ui:
-    build:
-      context: ./web-ui
-    container_name: deepseek-web-ui
-    depends_on:
-      postgres:
-        condition: service_healthy
-      ollama:
-        condition: service_started
-    environment:
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: ${POSTGRES_DB}
-      POSTGRES_HOST: postgres
-      MODEL_NAME: ${MODEL_NAME:-deepseek-coder:6.7b-instruct-q5_K_M}
-      OLLAMA_HOST: ollama
-      SESSION_SECRET: ${SESSION_SECRET}
-      ADMIN_USERNAME: ${ADMIN_USERNAME:-admin}
-      ADMIN_PASSWORD: ${ADMIN_PASSWORD}
-    expose:
-      - "8000"
-    networks:
-      - deepseek_network
-    restart: unless-stopped
-
-  # NGINX for authentication, rate limiting and GZIP compression
-  nginx:
-    build:
-      context: ./nginx
-    container_name: deepseek-nginx
-    depends_on:
-      - web-ui
-    ports:
-      - "${PORT:-80}:80"
-    environment:
-      - WEB_UI_HOST=web-ui
-      - MAX_BODY_SIZE=${MAX_BODY_SIZE:-10M}
-      - RATE_LIMIT_REQS=${RATE_LIMIT_REQS:-10}
-      - RATE_LIMIT_WINDOW=${RATE_LIMIT_WINDOW:-60s}
-      - FAILED_LOGIN_LIMIT=${FAILED_LOGIN_LIMIT:-5}
-      - NGINX_ENVSUBST_TEMPLATE_DIR=/etc/nginx/templates
-      - NGINX_ENVSUBST_OUTPUT_DIR=/etc/nginx
-      - NGINX_ENVSUBST_TEMPLATE_SUFFIX=.template
-    volumes:
-      - ./nginx/templates:/etc/nginx/templates
-    networks:
-      - deepseek_network
-    restart: unless-stopped
-
-networks:
-  deepseek_network:
-    driver: bridge
 
 volumes:
   postgres_data:
