--- a/web-ui/requirements.txt
+++ b/web-ui/requirements.txt
@@ -19,3 +19,7 @@ shortuuid>=1.0.11
 markdown>=3.4.0
 pygments>=2.14.0
 aiofiles>=23.0.0
+
+# Github intergration
+pygithub>=2.1.1
+gitpython>=3.1.30
