--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -34,9 +34,16 @@ http {
     client_max_body_size 10M;
 
     # Timeouts
-    client_body_timeout 12;
-    client_header_timeout 12;
-    send_timeout 10;
+    # Increase timeouts
+    proxy_connect_timeout 300s;
+    proxy_send_timeout 300s;
+    proxy_read_timeout 300s;
+    
+    # For WebSocket connections
+    proxy_http_version 1.1;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection "upgrade";
+    proxy_set_header Host $host;
 
     # GZIP Configuration
     gzip on;
