--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,9 +1,6 @@
 # File: nginx.conf 
 # Directory: /deepseek-coder-setup/nginx/
 
-# Main nginx configuration with all settings hardcoded
-# No templates or environment variable substitution
-
 # User and worker processes
 user nginx;
 worker_processes auto;
@@ -29,15 +26,14 @@ http {
     sendfile on;
     tcp_nopush on;
     tcp_nodelay on;
-    keepalive_timeout 65;
+    keepalive_timeout 120;  # Increased from 65
     types_hash_max_size 2048;
     client_max_body_size 10M;
 
-    # Timeouts
-    # Increase timeouts
-    proxy_connect_timeout 300s;
-    proxy_send_timeout 300s;
-    proxy_read_timeout 300s;
+    # Timeouts - INCREASED FOR 33B MODEL
+    proxy_connect_timeout 600s;  # Increased from 300s
+    proxy_send_timeout 600s;     # Increased from 300s
+    proxy_read_timeout 600s;     # Increased from 300s
     
     # For WebSocket connections
     proxy_http_version 1.1;
@@ -112,10 +108,28 @@ http {
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "upgrade";
             
-            # Timeouts
-            proxy_connect_timeout 10s;
-            proxy_send_timeout 30s;
-            proxy_read_timeout 60s;
+            # Timeouts - INCREASED FOR 33B MODEL
+            proxy_connect_timeout 60s;   # Increased from 10s
+            proxy_send_timeout 600s;     # Increased from 30s
+            proxy_read_timeout 600s;     # Increased from 60s
+        }
+        
+        # WebSocket endpoint with longer timeouts
+        location /ws/ {
+            proxy_pass http://web-ui:8000;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            
+            # WebSocket support
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+            
+            # Significantly increased timeouts for WebSocket
+            proxy_connect_timeout 60s;
+            proxy_send_timeout 600s;
+            proxy_read_timeout 600s;
         }
         
         # Login endpoint with stricter rate limiting
