--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,94 +1,118 @@
 version: '3.8'
 
 services:
-  # PostgreSQL Database
-  postgres:
-    build: ./db
-    container_name: deepseek-postgres
-    environment:
-      POSTGRES_USER: ${POSTGRES_USER:-postgres}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-postgres}
-      POSTGRES_DB: ${POSTGRES_DB:-deepseek}
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres"]
-      interval: 5s
-      timeout: 5s
-      retries: 5
-    restart: unless-stopped
-    networks:
-      - deepseek-network
-
-  # Web UI Application
-  web-ui:
-    build: ./web-ui
-    container_name: deepseek-web-ui
-    depends_on:
-      postgres:
-        condition: service_healthy
-    environment:
-      POSTGRES_USER: ${POSTGRES_USER:-postgres}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-postgres}
-      POSTGRES_DB: ${POSTGRES_DB:-deepseek}
-      POSTGRES_HOST: postgres
-      OLLAMA_HOST: ollama
-      OLLAMA_PORT: 11434
-      MODEL_NAME: deepseek-coder:33b-instruct-q5_K_M
-      SESSION_SECRET: ${SESSION_SECRET:-changeme_in_production}
-      ADMIN_USERNAME: ${ADMIN_USERNAME:-admin}
-      ADMIN_PASSWORD: ${ADMIN_PASSWORD:-admin}
-      GITHUB_TOKEN: ${GITHUB_TOKEN:-}
-    restart: unless-stopped
-    networks:
-      - deepseek-network
-
-  # Nginx Reverse Proxy
   nginx:
-    build: ./nginx
-    container_name: deepseek-nginx
-    depends_on:
-      - web-ui
+    image: nginx:alpine
+    container_name: ai-nginx
     ports:
-      - "${PORT:-80}:80"
+      - "80:80"
+      - "443:443"
     volumes:
-      - ./nginx/static:/usr/share/nginx/html/static
-    restart: unless-stopped
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./nginx/conf.d:/etc/nginx/conf.d:ro
+      - ./static:/usr/share/nginx/html/static:ro
+      - nginx_cache:/var/cache/nginx
+    depends_on:
+      - quart-app
     networks:
-      - deepseek-network
+      - ai-network
+    deploy:
+      resources:
+        limits:
+          cpus: '0.5'
+          memory: 512M
+        reservations:
+          cpus: '0.25'
+          memory: 256M
+    restart: unless-stopped
 
-  # Ollama Model Server with GPU acceleration
   ollama:
     build:
       context: ./ollama
       dockerfile: Dockerfile
-    container_name: deepseek-ollama
+    container_name: ai-ollama
     volumes:
-      - ollama_data:/root/.ollama
+      - ollama_models:/root/.ollama/models
+      - ./ollama/scripts:/scripts
+    environment:
+      - NVIDIA_VISIBLE_DEVICES=all
+      - OLLAMA_HOST=0.0.0.0
     ports:
       - "11434:11434"
-    # Memory and CPU allocation
+    networks:
+      - ai-network
     deploy:
       resources:
         limits:
-          memory: 24G  # Allocate 24GB of memory (adjust based on your system)
+          cpus: '2.0'
+          memory: 16G
         reservations:
-          memory: 16G  # Guarantee at least 16GB
+          cpus: '1.0'
+          memory: 8G
           devices:
             - driver: nvidia
               count: all
               capabilities: [gpu]
-    environment:
-      - OLLAMA_NUM_GPU_LAYERS=50  # Optional: Set number of GPU layers if needed
-      - OLLAMA_RAM_SIZE=16GB      # Optional: Set RAM usage limit
+    runtime: nvidia
     restart: unless-stopped
+
+  quart-app:
+    build:
+      context: ./quart-app
+      dockerfile: Dockerfile
+    container_name: ai-quart-app
+    environment:
+      - REDIS_URL=redis://redis:6379/0
+      - OLLAMA_URL=http://ollama:11434
+      - SECRET_KEY=${SECRET_KEY:-your-secret-key-here}
+    volumes:
+      - ./quart-app:/app
+    depends_on:
+      - redis
+      - ollama
     networks:
-      - deepseek-network
+      - ai-network
+    deploy:
+      resources:
+        limits:
+          cpus: '1.0'
+          memory: 8G
+        reservations:
+          cpus: '0.5'
+          memory: 4G
+    restart: unless-stopped
+
+  redis:
+    image: redis:7-alpine
+    container_name: ai-redis
+    command: redis-server /usr/local/etc/redis/redis.conf
+    volumes:
+      - redis_data:/data
+      - ./redis/redis.conf:/usr/local/etc/redis/redis.conf:ro
+    ports:
+      - "6379:6379"
+    networks:
+      - ai-network
+    deploy:
+      resources:
+        limits:
+          cpus: '0.5'
+          memory: 2G
+        reservations:
+          cpus: '0.25'
+          memory: 1G
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
 networks:
-  deepseek-network:
+  ai-network:
     driver: bridge
 
 volumes:
-  postgres_data:
-  ollama_data:
+  nginx_cache:
+  ollama_models:
+  redis_data:
