--- a/redis/redis.conf
+++ b/redis/redis.conf
@@ -19,9 +19,12 @@ databases 16
 always-show-logo no
 
 # Persistence - RDB snapshots
-save 900 1      # After 900 sec (15 min) if at least 1 key changed
-save 300 10     # After 300 sec (5 min) if at least 10 keys changed
-save 60 10000   # After 60 sec if at least 10000 keys changed
+save 900 1      
+# After 900 sec (15 min) if at least 1 key changed
+save 300 10     
+# After 300 sec (5 min) if at least 10 keys changed
+save 60 10000   
+# After 60 sec if at least 10000 keys changed
 
 stop-writes-on-bgsave-error yes
 rdbcompression yes
