--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,16 @@
 version: '3.8'
 
 services:
+  # Nginx Reverse Proxy
   nginx:
-    image: nginx:alpine
+    build: ./nginx
     container_name: ai-nginx
     ports:
       - "80:80"
       - "443:443"
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./nginx/conf.d:/etc/nginx/conf.d:ro
+      #- ./nginx/conf.d:/etc/nginx/conf.d:ro
       - ./static:/usr/share/nginx/html/static:ro
       - nginx_cache:/var/cache/nginx
     depends_on:
@@ -25,7 +26,7 @@ services:
           cpus: '0.25'
           memory: 256M
     restart: unless-stopped
-
+  # Ollama Model Server with GPU acceleration  
   ollama:
     build:
       context: ./ollama
@@ -55,7 +56,7 @@ services:
               capabilities: [gpu]
     runtime: nvidia
     restart: unless-stopped
-
+  # Web UI Application
   quart-app:
     build:
       context: ./quart-app
@@ -81,7 +82,7 @@ services:
           cpus: '0.5'
           memory: 4G
     restart: unless-stopped
-
+  #Database in JSON format with data persist docker volume and conf
   redis:
     image: redis/redis-stack-server
     container_name: ai-redis
