--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,248 +1,168 @@
+# File: nginx.conf 
+# Directory: /deepseek-coder-setup/nginx/
+
+# User and worker processes
 user nginx;
 worker_processes auto;
-error_log /var/log/nginx/error.log warn;
 pid /var/run/nginx.pid;
+error_log /var/log/nginx/error.log warn;
 
+# Events configuration
 events {
     worker_connections 1024;
-    use epoll;
 }
 
 http {
     include /etc/nginx/mime.types;
     default_type application/octet-stream;
 
-    # Logging
+    # Log format
     log_format main '$remote_addr - $remote_user [$time_local] "$request" '
                     '$status $body_bytes_sent "$http_referer" '
                     '"$http_user_agent" "$http_x_forwarded_for"';
     access_log /var/log/nginx/access.log main;
 
-    # Performance settings
+    # Basic settings
     sendfile on;
     tcp_nopush on;
     tcp_nodelay on;
-    keepalive_timeout 65;
+    keepalive_timeout 120;  # Increased from 65
     types_hash_max_size 2048;
+    client_max_body_size 10M;
 
-    # Gzip compression
+    # Timeouts - INCREASED FOR 33B MODEL
+    proxy_connect_timeout 600s;  # Increased from 300s
+    proxy_send_timeout 600s;     # Increased from 300s
+    proxy_read_timeout 600s;     # Increased from 300s
+    
+    # For WebSocket connections
+    proxy_http_version 1.1;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection "upgrade";
+    proxy_set_header Host $host;
+
+    # GZIP Configuration
     gzip on;
-    gzip_vary on;
-    gzip_proxied any;
     gzip_comp_level 6;
-    gzip_types text/plain text/css text/xml text/javascript 
-               application/json application/javascript application/xml+rss 
-               application/rss+xml application/atom+xml image/svg+xml;
-    gzip_min_length 1000;
-    gzip_disable "msie6";
+    gzip_min_length 256;
+    gzip_buffers 16 8k;
+    gzip_http_version 1.1;
+    gzip_proxied any;
+    gzip_vary on;
+    gzip_types
+        text/plain
+        text/css
+        text/javascript
+        text/xml
+        application/javascript
+        application/json
+        application/xml
+        application/x-javascript
+        application/xhtml+xml
+        application/rss+xml
+        application/atom+xml
+        font/opentype
+        font/truetype
+        font/ttf
+        image/svg+xml;
+    gzip_disable "MSIE [1-6]\.(?!.*SV1)";
 
-    # Rate limiting zones
-    limit_req_zone $binary_remote_addr zone=general:10m rate=10r/s;
-    limit_req_zone $binary_remote_addr zone=api:10m rate=5r/s;
-    limit_req_zone $binary_remote_addr zone=chat:10m rate=2r/s;
+    # Security Headers
+    add_header X-Frame-Options SAMEORIGIN;
+    add_header X-Content-Type-Options nosniff;
+    add_header X-XSS-Protection "1; mode=block";
+    add_header Referrer-Policy "strict-origin-when-cross-origin";
+    add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; img-src 'self' data:; font-src 'self' data:; connect-src 'self'";
+
+    # Rate Limiting Zones
+    # 1. General rate limiting
+    limit_req_zone $binary_remote_addr zone=general_limit:10m rate=10r/m;
     
-    # Connection limiting
-    limit_conn_zone $binary_remote_addr zone=conn_limit:10m;
-
-    # IP Whitelist Configuration
-    # By default, allow all IPs. Uncomment and modify to restrict access.
+    # 2. Login attempt rate limiting
+    limit_req_zone $binary_remote_addr zone=login_limit:10m rate=5r/m;
     
-    # Define whitelist
-    # geo $whitelist {
-    #     default 0;
-    #     
-    #     # Allow all IPs (default)
-    #     # 0.0.0.0/0 1;
-    #     
-    #     # Example: Whitelist single IP
-    #     # 192.168.1.100 1;
-    #     
-    #     # Example: Whitelist subnet (CIDR notation)
-    #     # 192.168.1.0/24 1;
-    #     # 10.0.0.0/8 1;
-    #     
-    #     # Example: Multiple entries
-    #     # 192.168.1.0/24 1;
-    #     # 172.16.0.0/12 1;
-    #     # 203.0.113.45 1;
-    # }
-    
-    # map $whitelist $limit_access {
-    #     0 1;  # Deny if not whitelisted
-    #     1 0;  # Allow if whitelisted
-    # }
+    # Rate limit status page for failed login protection
+    limit_req_status 429;
 
-    # Upstream configuration
-    upstream quart_backend {
-        server quart-app:8000;
-        keepalive 32;
-    }
-
-    # Cache configuration
-    proxy_cache_path /var/cache/nginx levels=1:2 keys_zone=static_cache:10m 
-                     max_size=1g inactive=60m use_temp_path=off;
-
-    # CDN proxy for Bootstrap and other libraries
-    location /cdn/ {
-        proxy_pass https://cdn.jsdelivr.net/;
-        proxy_ssl_server_name on;
-        proxy_set_header Host cdn.jsdelivr.net;
-        
-        # Cache CDN resources for 30 days
-        proxy_cache static_cache;
-        proxy_cache_valid 200 30d;
-        proxy_cache_key "$scheme$proxy_host$request_uri";
-        proxy_ignore_headers Cache-Control;
-        add_header X-Cache-Status $upstream_cache_status;
-        add_header Cache-Control "public, immutable, max-age=2592000";
-        
-        # Gzip
-        gzip on;
-        gzip_types text/css application/javascript;
-    }
-
-    # Main server block
+    # Server configuration
     server {
         listen 80;
         server_name _;
         
-        # Security headers
-        add_header X-Content-Type-Options nosniff;
-        add_header X-Frame-Options DENY;
-        add_header X-XSS-Protection "1; mode=block";
-        add_header Referrer-Policy "strict-origin-when-cross-origin";
+        # Root directory for static files
+        root /usr/share/nginx/html;
         
-        # IP whitelist check (uncomment to enable)
-        # if ($limit_access) {
-        #     return 403;
-        # }
-
-        # Static content with caching
+        # Main application proxy
+        location / {
+            # General rate limiting
+            limit_req zone=general_limit burst=5 nodelay;
+            
+            proxy_pass http://quart-app:8000;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            
+            # WebSocket support
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+            
+            # Timeouts - INCREASED FOR 33B MODEL
+            proxy_connect_timeout 60s;   # Increased from 10s
+            proxy_send_timeout 600s;     # Increased from 30s
+            proxy_read_timeout 600s;     # Increased from 60s
+        }
+        
+        # WebSocket endpoint with longer timeouts
+        location /ws/ {
+            proxy_pass http://quart-app:8000;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            
+            # WebSocket support
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+            
+            # Significantly increased timeouts for WebSocket
+            proxy_connect_timeout 60s;
+            proxy_send_timeout 600s;
+            proxy_read_timeout 600s;
+        }
+        
+        # Login endpoint with stricter rate limiting
+        location /login {
+            limit_req zone=login_limit burst=3 nodelay;
+            limit_req_status 429;
+            
+            proxy_pass http://quart-app:8000/login;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+        
+        # Static files
         location /static/ {
             alias /usr/share/nginx/html/static/;
             expires 30d;
-            add_header Cache-Control "public, immutable";
-            
-            # Enable gzip for static files
-            gzip_static on;
-            
-            # Rate limiting for static content
-            limit_req zone=general burst=20 nodelay;
-            limit_conn conn_limit 10;
-            
-            # Specific handling for different file types
-            location ~* \.(css|js)$ {
-                expires 7d;
-                add_header Cache-Control "public, must-revalidate";
-            }
-            
-            location ~* \.(jpg|jpeg|png|gif|ico|svg|woff|woff2|ttf|eot)$ {
-                expires 30d;
-                add_header Cache-Control "public, immutable";
-            }
+            add_header Cache-Control "public, max-age=2592000";
         }
-
-        # WebSocket endpoint for chat
-        location /ws {
-            proxy_pass http://quart_backend;
-            proxy_http_version 1.1;
-            
-            # WebSocket headers
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection "upgrade";
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            
-            # Extended timeouts for AI responses
-            proxy_connect_timeout 7200s;
-            proxy_send_timeout 7200s;
-            proxy_read_timeout 7200s;
-            
-            # Disable buffering for WebSocket
-            proxy_buffering off;
-            proxy_cache off;
-            
-            # Rate limiting for WebSocket connections
-            limit_req zone=chat burst=5 nodelay;
-            limit_conn conn_limit 5;
+        
+        # Custom 403 error page for unauthorized IP access
+        error_page 403 /unauthorized.html;
+        location = /unauthorized.html {
+            root /usr/share/nginx/html;
+            internal;
         }
-
-        # API endpoints
-        location /api/ {
-            proxy_pass http://quart_backend;
-            proxy_http_version 1.1;
-            
-            # Headers
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            
-            # Extended timeouts for AI API calls
-            proxy_connect_timeout 300s;
-            proxy_send_timeout 300s;
-            proxy_read_timeout 300s;
-            
-            # Rate limiting for API
-            limit_req zone=api burst=10 nodelay;
-            limit_conn conn_limit 10;
-            
-            # Disable buffering for streaming responses
-            proxy_buffering off;
-            
-            # CORS headers (adjust as needed)
-            add_header Access-Control-Allow-Origin * always;
-            add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
-            add_header Access-Control-Allow-Headers "Authorization, Content-Type" always;
-            
-            if ($request_method = OPTIONS) {
-                return 204;
-            }
-        }
-
-        # Main application
-        location / {
-            proxy_pass http://quart_backend;
-            proxy_http_version 1.1;
-            
-            # Headers
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            
-            # Connection settings
-            proxy_set_header Connection "";
-            
-            # Timeouts
-            proxy_connect_timeout 60s;
-            proxy_send_timeout 60s;
-            proxy_read_timeout 60s;
-            
-            # Rate limiting
-            limit_req zone=general burst=20 nodelay;
-            limit_conn conn_limit 20;
-            
-            # Cache configuration for GET requests
-            proxy_cache static_cache;
-            proxy_cache_key $scheme$proxy_host$request_uri;
-            proxy_cache_valid 200 302 10m;
-            proxy_cache_valid 404 1m;
-            proxy_cache_use_stale error timeout updating http_500 http_502 http_503 http_504;
-            proxy_cache_background_update on;
-            proxy_cache_lock on;
-            
-            # Disable cache for logged-in users
-            proxy_cache_bypass $http_cookie;
-            proxy_no_cache $http_cookie;
-        }
-
-        # Health check endpoint
-        location /health {
-            access_log off;
-            return 200 "healthy\n";
-            add_header Content-Type text/plain;
+        
+        # Custom 429 error page for rate limiting
+        error_page 429 /rate_limited.html;
+        location = /rate_limited.html {
+            root /usr/share/nginx/html;
+            internal;
         }
     }
+}
