njinx bootstrap cdn and redis rejson.so line removal

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -84,6 +84,10 @@ http {
     # Rate limit status page for failed login protection
     limit_req_status 429;
 
+    # Cache configuration for CDN proxy
+    proxy_cache_path /var/cache/nginx/cdn levels=1:2 keys_zone=cdn_cache:10m 
+                     max_size=1g inactive=365d use_temp_path=off;
+
     # Server configuration
     server {
         listen 80;
@@ -91,6 +95,25 @@ http {
         
         # Root directory for static files
         root /usr/share/nginx/html;
+
+        # CDN proxy for Bootstrap and other libraries
+        location /cdn/ {
+            proxy_pass https://cdn.jsdelivr.net/;
+            proxy_ssl_server_name on;
+            proxy_set_header Host cdn.jsdelivr.net;
+            
+            # Cache CDN resources for 30 days
+            proxy_cache cdn_cache;
+            proxy_cache_valid 200 30d;
+            proxy_cache_key "$scheme$proxy_host$request_uri";
+            proxy_ignore_headers Cache-Control;
+            add_header X-Cache-Status $upstream_cache_status;
+            add_header Cache-Control "public, immutable, max-age=2592000";
+            
+            # Gzip
+            gzip on;
+            gzip_types text/css application/javascript;
+        }
         
         # Main application proxy
         location / {
