--- a/redis/redis.conf
+++ b/redis/redis.conf
@@ -53,8 +53,7 @@ lazyfree-lazy-expire no
 lazyfree-lazy-server-del no
 replica-lazy-flush no
 
-# Modules
-loadmodule /usr/lib/redis/modules/rejson.so
+# Modules - REMOVED rejson.so as redis-stack already includes it
 
 # Slow log
 slowlog-log-slower-than 10000
