--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,8 +10,7 @@ services:
       - "443:443"
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-      #- ./nginx/conf.d:/etc/nginx/conf.d:ro
-      - ./static:/usr/share/nginx/html/static:ro
+      #- ./nginx/static:/usr/share/nginx/html/static:ro  # Mount static files
       - nginx_cache:/var/cache/nginx
     depends_on:
       - quart-app
@@ -26,6 +25,7 @@ services:
           cpus: '0.25'
           memory: 256M
     restart: unless-stopped
+  
   # Ollama Model Server with GPU acceleration  
   ollama:
     build:
@@ -56,6 +56,7 @@ services:
               capabilities: [gpu]
     runtime: nvidia
     restart: unless-stopped
+  
   # Web UI Application
   quart-app:
     build:
@@ -82,6 +83,7 @@ services:
           cpus: '0.5'
           memory: 4G
     restart: unless-stopped
+  
   #Database in JSON format with data persist docker volume and conf
   redis:
     build: ./redis
