--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -138,7 +138,7 @@ http {
         }
         
         # WebSocket endpoint with longer timeouts
-        location /ws/ {
+        location /ws {
             proxy_pass http://quart-app:8000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
