--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       - "443:443"
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-      #- ./nginx/static:/usr/share/nginx/html/static:ro  # Mount static files
+      - ./nginx/static:/usr/share/nginx/html/static:ro  # Mount static files even though they are docker installed as well eheh
       - nginx_cache:/var/cache/nginx
     depends_on:
       - quart-app
@@ -38,6 +38,7 @@ services:
     environment:
       - NVIDIA_VISIBLE_DEVICES=all
       - OLLAMA_HOST=0.0.0.0
+      - OLLAMA_MODEL=${OLLAMA_MODEL:-deepseek-coder-v2:16b}
     ports:
       - "11434:11434"
     networks:
@@ -46,10 +47,10 @@ services:
       resources:
         limits:
           cpus: '2.0'
-          memory: 16G
+          memory: ${OLLAMA_MEMORY_LIMIT:-16G}
         reservations:
           cpus: '1.0'
-          memory: 8G
+          memory: ${OLLAMA_MEMORY_RESERVATION:-8G}
           devices:
             - driver: nvidia
               count: all
@@ -78,7 +79,7 @@ services:
       resources:
         limits:
           cpus: '1.0'
-          memory: 8G  #Max for one 3060ti
+          memory: 8G
         reservations:
           cpus: '0.5'
           memory: 4G
