--- a/example.env
+++ b/example.env
@@ -42,12 +42,16 @@ DEBUG=false
 NGINX_RATE_LIMIT_GENERAL=60
 NGINX_RATE_LIMIT_LOGIN=5
 NGINX_RATE_LIMIT_API=30
+NGINX_GENERAL_BURST=20
+NGINX_API_BURST=10
+NGINX_LOGIN_BURST=3
+NGINX_PROXY_TIMEOUT=600
 
 # Docker Resource Limits (for docker-compose)
 QUART_APP_MEMORY_LIMIT=8G
 QUART_APP_MEMORY_RESERVATION=4G
-OLLAMA_MEMORY_LIMIT=8G
-OLLAMA_MEMORY_RESERVATION=6G
+OLLAMA_MEMORY_LIMIT=16G
+OLLAMA_MEMORY_RESERVATION=8G
 REDIS_MEMORY_LIMIT=2G
 
 # GPU Configuration
