--- a/redis/redis.conf
+++ b/redis/redis.conf
@@ -25,6 +25,22 @@ save 300 10
 # After 300 sec (5 min) if at least 10 keys changed
 save 60 10000
 # After 60 sec if at least 10000 keys changed
+save 30 1
+# After 30 sec if at least 1 key changed (more frequent saves)
+save 5 1
+# After 5 sec if at least 1 key changed (very frequent for chat app)
+
+# Persistence - AOF (Append Only File)
+appendonly yes
+appendfilename "appendonly.aof"
+appendfsync always
+# Use 'always' instead of 'everysec' for immediate persistence
+# This ensures every write is immediately flushed to disk
+no-appendfsync-on-rewrite no
+auto-aof-rewrite-percentage 100
+auto-aof-rewrite-min-size 64mb
+aof-load-truncated yes
+aof-use-rdb-preamble yes
 
 stop-writes-on-bgsave-error yes
 rdbcompression yes
