--- a/example.env
+++ b/example.env
@@ -1,5 +1,5 @@
 # .env file - DeepSeek Coder Setup
-# Copy this to .env and modify as needed
+# Copy this from example.env and modify as needed
 
 # Security
 SECRET_KEY=your-very-secret-key-change-this-in-production-make-it-long-and-random
