custom prompt and context for ollama

--- a/ollama/Dockerfile
+++ b/ollama/Dockerfile
@@ -1,13 +1,15 @@
-FROM ollama/ollama:latest
+FROM ollama/ollama:0.7.0
 
 # Install required packages
 RUN apt-get update && apt-get install -y \
     curl \
     bash \
+    jq \
     && rm -rf /var/lib/apt/lists/*
 
-# Copy initialization script
+# Copy initialization script and Modelfile
 COPY scripts/init-ollama.sh /scripts/init-ollama.sh
+COPY Modelfile /root/Modelfile
 RUN chmod +x /scripts/init-ollama.sh
 
 # Set working directory
